...
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:scrollbars="none"
            tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
...
