<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/din_pro_medium"
            android:gravity="center"
            android:text="@string/fragment_form_title"
            android:textColor="@color/title"
            android:textSize="16sp"/>
    </LinearLayout>

</ScrollView>